// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPasswordResetPageUI > renders default view 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title full"
          >
            Lock It Down!
          </h1>
          <p
            class="typography text medium"
          >
            Choose your dazzling new password and confirm it below. Let’s keep those sneaky hackers out!
          </p>
          <form
            class="form"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-password-textfield"
                  id="password"
                  maxlength="128"
                  minlength="8"
                  name="password"
                  placeholder="New Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary"
              >
                <input
                  class="textfield"
                  data-testid="test-confirmPassword-textfield"
                  id="confirmPassword"
                  maxlength="128"
                  minlength="8"
                  name="confirmPassword"
                  placeholder="Confirm Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction"
            >
              <button
                data-testid="test-reset-password-button-button"
                disabled=""
                id="reset-password-button"
                name="reset-password-button"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-lock"
                  data-icon="lock"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 384 512"
                >
                  <path
                    d="M128 96l0 64 128 0 0-64c0-35.3-28.7-64-64-64s-64 28.7-64 64zM64 160l0-64C64 25.3 121.3-32 192-32S320 25.3 320 96l0 64c35.3 0 64 28.7 64 64l0 224c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 224c0-35.3 28.7-64 64-64z"
                    fill="currentColor"
                  />
                </svg>
                <span>
                  Lock It Down!
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthPasswordResetPageUI > renders error view 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="badge large border"
            style="outline-color: white; color: white;"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark"
              data-icon="xmark"
              data-prefix="fas"
              role="img"
              viewBox="0 0 384 512"
            >
              <path
                d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
                fill="currentColor"
              />
            </svg>
          </div>
          <h1
            class="typography title small"
          >
            Oops! Something went wrong.
          </h1>
          <p
            class="typography text medium"
          >
            The supplied link is invalid or has expired.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthPasswordResetPageUI > renders loading view 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title full"
          >
            Lock It Down!
          </h1>
          <p
            class="typography text medium"
          >
            Choose your dazzling new password and confirm it below. Let’s keep those sneaky hackers out!
          </p>
          <form
            class="form"
          >
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary disabled"
              >
                <input
                  class="textfield"
                  data-testid="test-password-textfield"
                  disabled=""
                  id="password"
                  maxlength="128"
                  minlength="8"
                  name="password"
                  placeholder="New Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="inputContainer"
            >
              <div
                class="textFieldInputContainer textFieldInputKindPrimary disabled"
              >
                <input
                  class="textfield"
                  data-testid="test-confirmPassword-textfield"
                  disabled=""
                  id="confirmPassword"
                  maxlength="128"
                  minlength="8"
                  name="confirmPassword"
                  placeholder="Confirm Password"
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              class="buttonInputContainer buttonInputKindCallToAction"
            >
              <button
                data-testid="test-reset-password-button-button"
                disabled=""
                id="reset-password-button"
                name="reset-password-button"
                type="submit"
              >
                <div
                  class="loadingSpinner"
                >
                  <div />
                  <div />
                  <div />
                </div>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
